# address_validators_testing_util

./: .gitignore  README.md  pyproject.toml
src/address_validators_testing_util/: main.py  settings.py  validator_tester.py
src/address_validators_testing_util/parsers/: bnb_address_parser.py  btc_address_parser.py
