[tool.poetry]
name = "address_validators_testing_util"
version = "0.1.0"
description = "Tests the correctness of the crypto address validators of supported symbols by parsing addresses from the blockchain network and passing them to the appropriate validators."
authors = ["null-po1nter <me.nullptr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
crypto-address-validator = "^0.5.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
pep8-naming = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
validation_tests = "src.address_validators_testing_util.main:main"
